# test/FrameUp.OrderService.Behaviour.Tests/OpenAPIs/swagger.json
@@ -46,26 +46,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/CreateProcessingOrderResponse"
-                  }
+                  "$ref": "#/components/schemas/CreateProcessingOrderResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/CreateProcessingOrderResponse"
-                  }
+                  "$ref": "#/components/schemas/CreateProcessingOrderResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/CreateProcessingOrderResponse"
-                  }
+                  "$ref": "#/components/schemas/CreateProcessingOrderResponse"
                 }
               }
             }
